Add an article section

--- a/articles.html
+++ b/articles.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>swjang702's Portfolio</title>
+    <title>Articles - swjang702's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">swjang702</a>
+        <a class="navbar-brand" href="/index.html">swjang702</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="/index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="articles.html">Articles</a>
+              <a class="nav-link" href="/articles.html">Articles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="/index.html#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="/index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -33,18 +33,9 @@
     </nav>
 
     <div class="container mt-5">
-      <div id="about" class="row">
+      <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h1 class="display-4">Welcome!</h1>
-          <p class="lead">This is a simple, clean portfolio created with Bootstrap.</p>
-          <hr class="my-4">
-          <p>You can customize this section to tell people a little about yourself.</p>
-        </div>
-      </div>
-
-      <div id="articles" class="row mt-5">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="display-4">Recent Articles</h2>
+          <h1 class="display-4">All Articles</h1>
           <hr class="my-4">
           <div class="list-group">
             <a href="/articles/exploring-ebpf.html" class="list-group-item list-group-item-action">
@@ -54,9 +45,7 @@
               </div>
               <p class="mb-1">A deep dive into the world of eBPF and its capabilities.</p>
             </a>
-          </div>
-          <div class="text-center mt-4">
-            <a href="articles.html" class="btn btn-outline-primary">View All Articles</a>
+            <!-- Add more articles here as you write them -->
           </div>
         </div>
       </div>
