Customizing the About section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,29 @@
     </nav>
 
     <div class="container mt-5">
-      <div id="about" class="row">
-        <div class="col-lg-8 mx-auto">
-          <h1 class="display-4">Welcome!</h1>
-          <p class="lead">This is a simple, clean portfolio created with Bootstrap.</p>
+      <div id="about" class="row align-items-center">
+        <div class="col-md-4 text-center">
+          <img src="https://via.placeholder.com/250" class="img-fluid rounded-circle" alt="Profile Picture">
+        </div>
+        <div class="col-md-8">
+          <h1 class="display-4">Sunwoo Jang</h1>
+          <p class="lead">Researcher & Software Engineer</p>
           <hr class="my-4">
-          <p>You can customize this section to tell people a little about yourself.</p>
+          <p>
+            [A brief, engaging paragraph about your professional background and interests goes here. You can mention your passion for technology, your key areas of expertise, and what drives you as a researcher and engineer.]
+          </p>
+          <h5>Interests & Skills</h5>
+          <ul>
+            <li>eBPF & Kernel Development</li>
+            <li>Container Runtimes & Orchestration</li>
+            <li>Systems Programming with Rust</li>
+            <li>Cloud Native Technologies</li>
+          </ul>
+          <div>
+            <a href="#" class="btn btn-outline-dark me-2">GitHub</a>
+            <a href="#" class="btn btn-outline-dark me-2">LinkedIn</a>
+            <a href="mailto:your-email@example.com" class="btn btn-outline-dark">Email</a>
+          </div>
         </div>
       </div>
 
