--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             I do reading articles and books, working out, searching technical stuff, drinking beer&wine, and thinking in my spare time.
           </p>
           <div class="mb-4">
-            <a href="#" class="btn btn-outline-primary me-2">GitHub</a>
-            <a href="#" class="btn btn-outline-primary me-2">LinkedIn</a>
+            <a href="https://github.com/swjang702" class="btn btn-outline-primary me-2" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/sunwoo-jang-4731a4179/" class="btn btn-outline-primary me-2" target="_blank">LinkedIn</a>
             <a href="mailto:swjang702@gmail.com" class="btn btn-outline-primary">Email</a>
           </div>
         </div>
@@ -116,6 +116,8 @@
         </div>
       </div>
     </div>
+
+    <div class="mb-5"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
