update work exp

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="mb-3">
                 <h6 class="mb-1">Embedded Software Engineer</h6>
                 <small class="text-muted">LG Innotek • Aug 2024 - Present</small>
-                <p class="small mt-1">Building BSP for connectivity modems and solving complex system problems</p>
+                <p class="small mt-1">Building BSP for automotive connectivity modems and solving system-level issues</p>
               </div>
               <div class="mb-3">
                 <h6 class="mb-1">Software Engineer</h6>
