--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="card-body">
               <h5 class="card-title">Research Interests</h5>
               <p class="card-text">
-                System Security, Container Technologies, Operating Systems, eBPF, Security Monitoring
+                System Security, Operating Systems, Container Technologies, Security Monitoring
               </p>
             </div>
           </div>
