--- a/index.html
+++ b/index.html
@@ -99,61 +99,45 @@
 
       <div id="publications" class="row mt-5">
         <div class="col-lg-10 mx-auto">
-          <h2 class="display-4">Publications</h2>
-          <hr class="my-4">
+          <h2 class="mb-4" style="font-weight: 300; color: #2c3e50;">Publications</h2>
+          <hr class="mb-5" style="border-color: #bdc3c7;">
           
           <!-- Conference Papers -->
-          <div class="mb-4">
-            <h4 class="text-primary mb-3">Conference Papers</h4>
-            <div class="card mb-3">
-              <div class="card-body">
-                <h5 class="card-title mb-2">SecQuant: Quantifying Container System Call Exposure</h5>
-                <p class="card-text mb-2">
-                  <strong>Sunwoo Jang</strong>, Somin Song, Byungchul Tak, Sahil Suneja, Michael V. Le, Chuan Yue, Dan Williams
-                </p>
-                <p class="card-text mb-2">
-                  <em>Proceedings of the 27th European Symposium on Research in Computer Security (ESORICS'22)</em><br>
-                  <small class="text-muted">Copenhagen, Denmark, September 2022</small>
-                </p>
-                <div class="d-flex gap-2">
-                  <span class="badge bg-primary">Container Security</span>
-                  <span class="badge bg-secondary">System Calls</span>
-                  <span class="badge bg-info">Quantitative Analysis</span>
-                </div>
-              </div>
+          <div class="mb-5">
+            <h4 class="mb-4" style="font-weight: 400; color: #34495e; border-bottom: 1px solid #ecf0f1; padding-bottom: 8px;">Conference Papers</h4>
+            <div class="mb-4" style="border-left: 3px solid #ecf0f1; padding-left: 20px;">
+              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">SecQuant: Quantifying Container System Call Exposure</h5>
+              <p class="mb-2" style="color: #5d6d7e;">
+                <strong>Sunwoo Jang</strong>, Somin Song, Byungchul Tak, Sahil Suneja, Michael V. Le, Chuan Yue, Dan Williams
+              </p>
+              <p class="mb-3" style="color: #7f8c8d;">
+                <em>Proceedings of the 27th European Symposium on Research in Computer Security (ESORICS'22)</em><br>
+                Copenhagen, Denmark, September 2022
+              </p>
             </div>
           </div>
 
           <!-- Journal Articles -->
-          <div class="mb-4">
-            <h4 class="text-primary mb-3">Journal Articles</h4>
-            <div class="card mb-3">
-              <div class="card-body">
-                <h5 class="card-title mb-2">Understanding File System Operations of a Secure Container Runtime Using System Call Tracing Technique</h5>
-                <p class="card-text mb-2">
-                  <strong>Sunwoo Jang</strong>, Young-Kyoon Suh, Byungchul Tak
-                </p>
-                <p class="card-text mb-2">
-                  <em>IEICE Transactions on Information and Systems</em><br>
-                  <small class="text-muted">Vol.E107, No.2, February 2024</small>
-                </p>
-                <div class="d-flex gap-2">
-                  <span class="badge bg-primary">Container Runtime</span>
-                  <span class="badge bg-secondary">File Systems</span>
-                  <span class="badge bg-info">System Call Tracing</span>
-                </div>
-              </div>
+          <div class="mb-5">
+            <h4 class="mb-4" style="font-weight: 400; color: #34495e; border-bottom: 1px solid #ecf0f1; padding-bottom: 8px;">Journal Articles</h4>
+            <div class="mb-4" style="border-left: 3px solid #ecf0f1; padding-left: 20px;">
+              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">Understanding File System Operations of a Secure Container Runtime Using System Call Tracing Technique</h5>
+              <p class="mb-2" style="color: #5d6d7e;">
+                <strong>Sunwoo Jang</strong>, Young-Kyoon Suh, Byungchul Tak
+              </p>
+              <p class="mb-3" style="color: #7f8c8d;">
+                <em>IEICE Transactions on Information and Systems</em><br>
+                Vol.E107, No.2, February 2024
+              </p>
             </div>
           </div>
 
           <!-- Research Interests -->
-          <div class="card bg-light">
-            <div class="card-body">
-              <h5 class="card-title">Research Interests</h5>
-              <p class="card-text">
-                System Security, Operating Systems, Container Technologies, Security Monitoring
-              </p>
-            </div>
+          <div class="mt-5 pt-4" style="border-top: 1px solid #ecf0f1;">
+            <h4 class="mb-3" style="font-weight: 400; color: #34495e;">Research Interests</h4>
+            <p style="color: #5d6d7e; line-height: 1.6;">
+              System Security, Operating Systems, Container Technologies, Security Monitoring
+            </p>
           </div>
         </div>
       </div>
