Add link for papers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">swjang702</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -106,7 +105,10 @@
           <div class="mb-5">
             <h4 class="mb-4" style="font-weight: 400; color: #34495e; border-bottom: 1px solid #ecf0f1; padding-bottom: 8px;">Conference Papers</h4>
             <div class="mb-4" style="border-left: 3px solid #ecf0f1; padding-left: 20px;">
-              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">SecQuant: Quantifying Container System Call Exposure</h5>
+              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">
+                SecQuant: Quantifying Container System Call Exposure 
+                <a href="https://www.cs.toronto.edu/~sahil/suneja-esorics22.pdf" class="text-decoration-none" style="color: #3498db; font-size: 0.9em;">[PDF]</a>
+              </h5>
               <p class="mb-2" style="color: #5d6d7e;">
                 <strong>Sunwoo Jang</strong>, Somin Song, Byungchul Tak, Sahil Suneja, Michael V. Le, Chuan Yue, Dan Williams
               </p>
@@ -121,7 +123,10 @@
           <div class="mb-5">
             <h4 class="mb-4" style="font-weight: 400; color: #34495e; border-bottom: 1px solid #ecf0f1; padding-bottom: 8px;">Journal Articles</h4>
             <div class="mb-4" style="border-left: 3px solid #ecf0f1; padding-left: 20px;">
-              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">Understanding File System Operations of a Secure Container Runtime Using System Call Tracing Technique</h5>
+              <h5 class="mb-2" style="font-weight: 500; color: #2c3e50;">
+                Understanding File System Operations of a Secure Container Runtime Using System Call Tracing Technique 
+                <a href="https://www.jstage.jst.go.jp/article/transinf/E107.D/2/E107.D_2023EDL8039/_pdf" class="text-decoration-none" style="color: #3498db; font-size: 0.9em;">[PDF]</a>
+              </h5>
               <p class="mb-2" style="color: #5d6d7e;">
                 <strong>Sunwoo Jang</strong>, Young-Kyoon Suh, Byungchul Tak
               </p>
