--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="col-12 text-center mb-5">
           <img src="portrait.jpeg" class="rounded-circle mb-3" alt="Sunwoo Jang Profile Picture" style="width: 150px; height: 150px; object-fit: cover;">
           <h1 class="display-4 mb-2">Sunwoo Jang</h1>
-          <p class="lead text-muted mb-3">Software Engineer & Researcher</p>
+          <p class="lead text-muted mb-2">Software Engineer & Researcher</p>
+          <p class="mb-4" style="color: #5d6d7e;">swjang702@gmail.com</p>
           <p class="mx-auto" style="max-width: 600px;">
             Software Engineer and Researcher with integrity and ambition who wants to contribute to the world for the better. Currently working as an Embedded Software Engineer at LG Innotek, with experiences in system-level programming, security research, and containerization technologies.
             In my spare time, I read articles and books, work out, research technical things, drink beer and wine, and think.
@@ -45,7 +46,6 @@
           <div class="mb-4">
             <a href="https://github.com/swjang702" class="btn btn-outline-primary me-2" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/sunwoo-jang-4731a4179/" class="btn btn-outline-primary me-2" target="_blank">LinkedIn</a>
-            <a href="mailto:swjang702@gmail.com" class="btn btn-outline-primary">Email</a>
           </div>
         </div>
 
