Modify about me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <p class="lead text-muted mb-2">Software Engineer & Researcher</p>
           <p class="mb-4" style="color: #5d6d7e;">swjang702@gmail.com</p>
           <p class="mx-auto" style="max-width: 600px;">
-            Software Engineer and Researcher with integrity and ambition who wants to contribute to the world for the better. Currently working as an Embedded Software Engineer at LG Innotek, with experiences in system-level programming, security research, and containerization technologies.
+            I am currently working as an Embedded Software Engineer at LG Innotek, with experiences in system-level programming, security research, and containerization technologies.
+            I conducted research on security measurements for secure container runtimes, which required extensive knowledge of secure containers, system call tracing, security features of Linux kernel, and kernel exploits.
             In my spare time, I read articles and books, work out, research technical things, drink beer and wine, and think.
           </p>
           <div class="mb-4">
