Modify about me2

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <p class="mb-4" style="color: #5d6d7e;">swjang702@gmail.com</p>
           <p class="mx-auto" style="max-width: 600px;">
             I am currently working as an Embedded Software Engineer at LG Innotek, with experiences in system-level programming, security research, and containerization technologies.
-            I conducted research on security measurements for secure container runtimes, which required extensive knowledge of secure containers, system call tracing, security features of Linux kernel, and kernel exploits.
-            In my spare time, I read articles and books, work out, research technical things, drink beer and wine, and think.
+            My past research focused on security measurements for secure container runtimes, requiring in-depth knowledge of secure containers, system call tracing, the Linux kernel's security features, and kernel exploits.
+            In my spare time, I enjoy exploring emerging technologies, reading books and articles, working out, drinking beer and wine, and thinking.
           </p>
           <div class="mb-4">
             <a href="https://github.com/swjang702" class="btn btn-outline-primary me-2" target="_blank">GitHub</a>
