Modify shape of my portrait

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="about" class="row">
         <!-- Profile Header -->
         <div class="col-12 text-center mb-5">
-          <img src="portrait.jpeg" class="rounded-circle mb-3" alt="Sunwoo Jang Profile Picture" style="width: 150px; height: 150px; object-fit: cover;">
+          <img src="portrait.jpeg" class="mb-3" alt="Sunwoo Jang Profile Picture" style="width: 150px; height: 200px; object-fit: cover; border-radius: 8px;">
           <h1 class="display-4 mb-2">Sunwoo Jang</h1>
           <p class="lead text-muted mb-2">Software Engineer & Researcher</p>
           <p class="mb-4" style="color: #5d6d7e;">swjang702@gmail.com</p>
