update about me

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p class="lead text-muted mb-2">Software Engineer & Researcher</p>
           <p class="mb-4" style="color: #5d6d7e;">swjang702@gmail.com</p>
           <p class="mx-auto" style="max-width: 600px;">
-            I am currently working as an Embedded Software Engineer at LG Innotek, with experiences in system-level programming, security research, and containerization technologies.
+            I have some experiences in system-level programming, security research, and containerization technologies.
             My past research focused on security measurements for secure container runtimes, requiring in-depth knowledge of secure containers, system call tracing, the Linux kernel's security features, and kernel exploits.
             In my spare time, I enjoy exploring emerging technologies, reading books and articles, working out, drinking beer and wine, and thinking.
           </p>
@@ -54,7 +54,7 @@
               <h5 class="card-title">Experience</h5>
               <div class="mb-3">
                 <h6 class="mb-1">Embedded Software Engineer</h6>
-                <small class="text-muted">LG Innotek • Aug 2024 - Present</small>
+                <small class="text-muted">LG Innotek • Aug 2024 - Aug 2025</small>
                 <p class="small mt-1">Building BSP for automotive connectivity modems and solving system-level issues</p>
               </div>
               <div class="mb-3">
@@ -140,7 +140,7 @@
             <h4 class="mb-3" style="font-weight: 400; color: #34495e;">Research Interests</h4>
             <p style="color: #5d6d7e; line-height: 1.6;">
               <!-- System Security, Operating Systems, Container Technologies, Security Monitoring -->
-              Formal modeling and verification of abstraction layer security properties, quantitative security measurement, and AI-accelerated verification methods.
+              OS, System security, Formal modeling and verification of abstraction layer security properties, security measurement.
             </p>
           </div>
         </div>
