--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <img src="portrait.jpeg" 
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang" 
-                     class="w-40 h-40 rounded-lg object-cover grayscale hover:grayscale-0 transition duration-500 shadow-sm">
+                     class="w-40 h-40 rounded-lg object-cover shadow-sm">
+                     <!-- class="w-40 h-40 rounded-lg object-cover grayscale hover:grayscale-0 transition duration-500 shadow-sm"> -->
             </div>
 
             <h1 class="text-2xl font-bold text-gray-900 mb-1">Sunwoo Jang</h1>
@@ -173,9 +174,9 @@
                 </div>
             </section>
 
-             <!-- Footer (Simplified) -->
-             <footer class="text-[0.65rem] text-gray-300 mt-20 pb-8 text-right">
-                <p>Last updated: Jan 2025</p>
+            <!-- Footer (Center Aligned, Minimalist) -->
+             <footer class="mt-auto pt-8 border-t border-gray-100 text-center text-xs text-gray-400">
+                <p>&copy; 2026 Sunwoo Jang. Last updated: Jan 14 2026.</p>
             </footer>
 
         </main>
