--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <!-- 프로필 사진 (수정됨: 직사각형 비율 허용) -->
             <div class="mb-8">
-                <img src="portrait.jpeg" 
+                <img src="golden_gate.jpg" 
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang" 
                      class="w-40 h-auto rounded-lg shadow-sm block">
@@ -101,10 +101,11 @@
                             <p class="text-gray-600 text-[0.95rem] mb-3 leading-relaxed">
                                 <u class="decoration-1 underline-offset-4 decoration-gray-400">Sunwoo Jang</u>, Somin Song, Byungchul Tak, Sahil Suneja, Michael V. Le, Chuan Yue, Dan Williams
                             </p>
+                            <!-- Minimal Buttons -->
                             <div class="flex flex-wrap gap-3 text-[0.7rem] font-bold tracking-wider uppercase text-gray-500">
-                                <a href="#" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
-                                <a href="#" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Code</a>
-                                <a href="#" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Slides</a>
+                                <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
+                                <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Code</a>
+                                <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Slides</a>
                             </div>
                         </div>
                     </div>
