--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             
             <!-- 프로필 사진 (수정됨: 사이드바 너비에 맞춰 꽉 차게 키움) -->
             <div class="mb-8">
-                <img src="golden_gate_cut.jpg"
+                <img src="images/golden_gate_cut.jpeg"
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang" 
-                     class="w-40 h-auto rounded-lg shadow-sm block">
+                     class="w-40 h-auto rounded-lg shadow-md block">
                      <!-- class="w-full h-auto rounded-lg shadow-md block"> -->
             </div>
 
