--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <img src="images/golden_gate_cut.jpeg"
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang" 
-                     class="w-40 h-auto rounded-lg shadow-md block">
-                     <!-- class="w-full h-auto rounded-lg shadow-md block"> -->
+                     class="w-48 h-auto rounded-lg shadow-md object-cover block">
+                     <!-- class="w-40 h-auto rounded-lg shadow-md block"> -->
             </div>
 
             <h1 class="text-2xl font-bold text-gray-900 mb-1">Sunwoo Jang</h1>
@@ -43,7 +43,7 @@
 
             <!-- 정보 및 링크 -->
             <div class="space-y-3 text-sm text-gray-600">
-                <p>Incoming PhD Student<br>@ [University Name]</p>
+                <!-- <p>Incoming PhD Student<br>@ [University Name]</p> -->
                 
                 <!-- 이메일 (이메일은 보통 새 탭이 아니라 메일 앱이 열리므로 그대로 둡니다) -->
                 <a href="mailto:swjang702@gmail.com" class="block hover:text-blue-700 hover:underline decoration-1 underline-offset-2">
