--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <!-- [LEFT SIDEBAR] -->
         <aside class="sidebar w-full md:w-64 flex-shrink-0 md:sticky md:top-20 md:h-fit">
             
-            <!-- 프로필 사진 (수정됨: 사이드바 너비에 맞춰 꽉 차게 키움) -->
-            <div class="mb-6"> <!-- 사진 아래 여백이 여유로운게 좋으면 8, 타이트한게 좋으면 6 -->
-                <img src="images/golden_gate_cut.jpeg"
+            <!-- 프로필 사진 (하늘 있는 버전 + 사이즈 키움) -->
+            <div class="mb-8"> <!-- 사진 아래 여백이 여유로운게 좋으면 8, 타이트한게 좋으면 6 -->
+                <img src="images/golden_gate_cut.jpeg" 
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
-                     alt="Sunwoo Jang" 
-                     class="w-40 h-auto rounded-lg shadow-md object-cover block">
+                     alt="Sunwoo Jang"
+                     class="w-[13rem] h-auto rounded-lg shadow-md object-cover block">
+                     <!-- class="w-40 h-auto rounded-lg shadow-md object-cover block"> -->
             </div>
 
             <h1 class="text-2xl font-bold text-gray-900 mb-1">Sunwoo Jang</h1>
