--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <!-- 아이콘 링크들 (새 탭 열기 적용) -->
                 <div class="flex flex-col gap-2 mt-6">
                     <!-- CV -->
-                    <a href="assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
+                    <a href="assets/cv.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
                         <svg class="w-4 h-4 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
                         <span>Curriculum Vitae</span>
                     </a>
                     <!-- Google Scholar -->
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
+                    <a href="https://scholar.google.co.kr/citations?user=_mLXrFsAAAAJ" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
                         <svg class="w-4 h-4 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
                         <span>Google Scholar</span>
                     </a>
