--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="images/golden_gate_cut.jpeg" 
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang"
-                     class="w-[13rem] h-auto rounded-lg shadow-md object-cover block">
+                     class="w-44 h-auto rounded-lg shadow-md object-cover block">
                      <!-- class="w-40 h-auto rounded-lg shadow-md object-cover block"> -->
             </div>
 
