remove experience section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
             </section>
 
-            <!-- 3. Experience Section -->
+            <!-- 3. Experience Section
             <section class="mb-24">
                 <h2 class="text-xl font-bold text-gray-900 mb-8 pb-2 border-b border-gray-100 inline-block">Experience</h2>
                 
@@ -164,11 +164,11 @@
                         <span class="text-sm text-gray-400 font-mono">2020 – 2022</span>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
              <!-- Footer (Center Aligned, Minimalist) -->
              <footer class="mt-auto pt-8 border-t border-gray-100 text-center text-xs text-gray-400">
-                <p>&copy; 2026 Sunwoo Jang. Last updated: Jan 14 2026.</p>
+                <p>&copy; 2026 Sunwoo Jang. Last updated: Jan 15 2026.</p>
             </footer>
 
         </main>
