--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <div class="flex flex-col gap-2 mt-6">
                     <!-- CV -->
                     <a href="assets/cv.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
-                        <svg class="w-4 h-4 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+                        <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-700 transition-colors" viewBox="0 0 24 24" fill="currentColor">
+                            <text x="50%" y="68%" dominant-baseline="middle" text-anchor="middle" font-family="Arial, sans-serif" font-weight="900" font-size="16" letter-spacing="-1">CV</text>
+                        </svg>
                         <span>Curriculum Vitae</span>
                     </a>
                     <!-- Google Scholar -->
